# security-code-audit

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  RELEASE.md  SKILL.md  pyproject.toml  使用场景说明.md
assets/: json-schema.json  report-template.md  security-audit.ignore.example  security-audit.toml.example
assets/ci/: azure-pipelines.yml  github-code-scanning.yml  gitlab-ci.yml
examples/csharp/: VulnerableController.cs
examples/go/: vulnerable_app.go
examples/java/: MixedSecurityController.java  VulnerableController.java
examples/javascript/: vulnerable_server.js
examples/kotlin/: VulnerableController.kt
examples/php/: vulnerable_app.php
examples/python/: vulnerable_advanced.py  vulnerable_app.py
references/: cwe-mapping.md  vulnerability-rules.md
scripts/: audit.py  audit.sh  skill_scan.sh
security_code_audit/: __init__.py  __main__.py  ai_analyzer.py  audit.py  config_loader.py  context_analyzer.py  rules.py  suppressions.py
tests/: test_rule_baselines.py  test_smoke.py
