[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-code-audit"
version = "1.0.0"
description = "Static security code audit tool with JSON, Markdown, and SARIF output."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Security Code Audit Maintainers"}
]
keywords = ["security", "sast", "code-audit", "sarif", "cwe", "owasp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
  "PyYAML>=6.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]

[project.scripts]
security-code-audit = "security_code_audit.audit:main"

[tool.setuptools]
packages = ["security_code_audit"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/audit.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "tests/",
]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
